04.9.2015: version 2.2.2
+ enhanced broken links functionality in HTTP and Sitemap check:
   now user can select if the check will follow outbound broken links
+ also now check broken links functionality doesn't require filled condition
+ added support for testing sitemapindex (part of existing sitemap check): 
   http://www.sitemaps.org/protocol.html#index
+ increased default maximum memory

13.8.2015: version 2.2.1
+ enhanced dashboard, now contains list of errors

12.8.2015: version 2.2.0
+ dashboard
+ checks split to multiple pages

17.7.2015: version 2.1.13
> thanks Jan Reges for suggestion
+ possibility to check each few seconds

24.6.2015: version 2.1.12
+ more nicer icons
+ more compact check date

23.6.2015: version 2.1.11
+ nicer icons

22.6.2015: version 2.1.10
+ upgraded libraries versions
+ added gzip compression to standalone so that it's even faster

14.6.2015: version 2.1.9
> thanks Ashley Hardesty for these suggestions
+ displaying current version in admin zone
+ button for clearing check results
+ chart stats
+ configurable chart Y-axis maximum
+ overall UI changes

3.6.2015: version 2.1.8
> thanks Ashley Hardesty for these suggestions
+ it's possible now to run the application as a Windows service

2.6.2015: version 2.1.7
+ added emailFrom field in configuration
+ tested more email providers

27.5.2015: version 2.1.6
+ modified defaults for sending emails, now it's much easier
+ added email configuration examples (localhost, mandrillapp, gmail) and a test tool to easily validate email configuration

19.5.2015: version 2.1.5
+ configurable db port in standalone application

5.2.2015: version 2.1.4
+ XML (using XPath) and JSON (using JSONPath) monitoring 
  - so far only GET method and XPath only retrieves text value, this might change in the future

1.2.2015: version 2.1.3
+ configurable User-Agent header
+ proxy support
+ optimized standalone application startup speed
+ reset-admin-credentials.bat for standalone application